changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Add 'race_restriction' key/value field, that enables to restrict an item
to being appliable only for certain races.
 doc/Developers/objects
 server/apply.c
Nicolas Weeger, 2008-02-13

Remove unused functions.
 common/porting.c
 include/libproto.h
Nicolas Weeger, 2008-02-13

Better tiled maps handling. Now tiled maps are considered as one map, and
all links will point to the group.
 utils/mapper.c
Nicolas Weeger, 2008-02-13

Kind of update a few things.
 doc/handbook.ps
 doc/playbook/appA.tex chap3.tex
Nicolas Weeger, 2008-02-09

Fix broken pics.
 doc/playbook/items-extract
 doc/playbook/Makefile.am
Nicolas Weeger, 2008-02-09

socket/loop.c request.c: fix missing parameter.
Nicolas Weeger, 2008-02-09

Use 'anim_suffix' in class selection to try to find a race/class animation.
 server/apply.c
Nicolas Weeger, 2008-02-09

Some bases for sending race/class info to client. Not finished.
 doc/Developers/protocol: update.
 include/sockproto.h
 socket/loop.c request.c
Nicolas Weeger, 2008-02-09

Helper stringbuffer function.
 common/stringbuffer.c
 include/stringbuffer.h
Nicolas Weeger, 2008-02-09

Get quest information from map's lore. Generate quest index.
 utils/mapper.c
 utils/templates/map.template
Added files:
 templates/map_no_quest.template map_one_quest.template map_with_quests.template
  quests.template quests_map.template quests_quest.template 
Nicolas Weeger, 2008-02-08

Include level of map in variables. Generate global map index by level.
 utils/mapper.c
Added files:
 utils/templates/level.template level_map.template level_value.template
Nicolas Weeger, 2008-02-08
