@@ -14,11 +14,18 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix various warnings, remove unused variables/code.
+ common/button.c languages.c
+ server/attack.c c_misc.c spell_util.c
+ socket/request.c sounds.c
+ types/gate/gate.c
+Nicolas Weeger, 2008-02-14
+
 Add 'race_restriction' key/value field, that enables to restrict an item
 to being appliable only for certain races.
  doc/Developers/objects
  server/apply.c
-Nicolas Weeger, 2008-02-13
+Nicolas Weeger, 2008-02-14
 
 Remove unused functions.
  common/porting.c
